cluster/game-servers/ark-se/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-se
  namespace: game-servers
  labels:
    app: ark-se
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ark-se
  template:
    metadata:
      labels:
        app: ark-se
    spec:
      containers:
        - name: ark-se
          image: spuxx/docker-ark:latest
          ports:
            - name: query
              protocol: UDP
              containerPort: 27015
            - name: game
              protocol: UDP
              containerPort: 7777
            - name: raw-socket
              protocol: UDP
              containerPort: 7778
          volumeMounts:
            - name: ark-se
              mountPath: /home/ips-hosting
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: ark-se
          hostPath:
            path: /mnt/kube/ark-se
