cluster/game-servers/ark-se/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ark-se
  namespace: game-servers
spec:
  selector:
    app: ark-se
  ports:
    - protocol: UDP # query
      port: 27015
      targetPort: 27015
    - protocol: UDP # game
      port: 7777
      targetPort: 7777
    - protocol: UDP # rawSocket
      port: 7778
      targetPort: 7778
