cluster/game-servers/ark-se/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ark-se
  namespace: game-servers
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.spuxx.dev"
      secretName: spuxx.dev
  rules:
    - host: ark.spuxx.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ark-se
                port:
                  number: 8080
